# OpenGL-Exercise

./: CMakeLists.txt  notes.txt
include/: Square.hpp  cube.hpp  math.hpp  shaderprogram.hpp  texturemanager.hpp
include/glad/: glad.h
include/glm/: exponential.hpp
include/glm/gtc/: constants.hpp
include/glm/gtx/: matrix_transform_2d.hpp
shaders/: simplefs.glsl  simplevs.glsl
src/: Square.cpp  cube.cpp  glad.c  main.cpp  math.cpp  shaderprogram.cpp  texturemanager.cpp
